<resources>

    <string name="nominal">Rp.320.000</string>
    <string name="tanggal">2022–03-08</string>
    <string name="app_name">Userbanksampah</string>
    <string name="heading_one">Pungut</string>
    <string name="welcome">Welcome,</string>
    <string name="heading_two">Setor</string>
    <string name="heading_three">Timbang</string>
    <string name="forgot">Forgot Password</string>
    <string name="saldo">Saldo Anda :</string>
    <string name="History">Riwayat </string>
    <string name="logout">Keluar </string>
    <string name="uang">Rp.1.000.000 </string>
    <string name="format_angka">Rp.%s </string>
    <string name="bobot_detail">%s KG </string>
    <string name="bobot_detail2">%s lITER </string>
    <string name="angka">085770538454</string>
    <string name="category">Kategori Sampah</string>
    <string name="Jenis">Jenis Sampah</string>
    <string name="name">Phaksi Bangun Asmoro</string>
    <string name="verify"> Pengajuan Penarikan</string>
    <string name="heading_fourth">Tarik Saldo</string>
    <string name="desc_one"> Sampah apapun yang anda pungut bisa dijadikan uang</string>
    <string name="desc_two">Setelah anda pungut dan kumpulkan, Lalu anda bisa menyetorkan di tempat pengumpulan sampah</string>
    <string name="desc_three">Tunggu admin menimbang semua sampah yang telah anda setorkan</string>
    <string name="desc_fourth">Selamat!!!
Sampah tidak berguna yang anda telah kumpulkan telah berubah menjadi uang yang anda dapat tarik </string>
    <string name="loginpage">Use the application according to policy rules. Any kinds of violoations will be subject to sanctions.</string>
    <string name="logosplashscreen">Logo</string>
    <string name="nama">nama</string>
    <string name="detail_mutasi">Detail Mutasi</string>
    <string name="arya_enrico">Arya</string>
    <string name="tanggaltv">tanggal</string>
    <string name="daftar_sampah">Daftar Sampah</string>
    <string name="total">Total</string>
    <string name="gayung">gayung</string>
    <string name="bobots">bobot</string>
    <string name="saldo_kurang">Maaf Saldo anda tidak cukup</string>
    <string name="gak_bisa_ajuan">Maaf anda belum bisa mengajukan penarikan jumlah transaksi anda kurang dari 3</string>
    <string name="aryaa">Arya Enrico</string>
    <string name="admin">Admin</string>
    <string name="tanggal_awal">Tanggal Awal</string>
    <string name="cek_transaksi">Cek Transaksi</string>
    <string name="tanggal_akhir">Tanggal Akhir</string>
    <string name="total_setor">Total Setor</string>
    <string name="total_rp_30_000">Total: Rp.30,000</string>
    <string name="tanggaltvv">Tanggal</string>
    <string name="phaksi_bangun_asmoro">Phaksi Bangun Asmoro</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="tanggaldetail">Tanggal</string>
    <string name="nama_admin">Nama Admin</string>
    <string name="ajukan">Ajukan</string>
    <string name="total_saldo">Total Saldo</string>
    <string name="pengajuan_penarikan">Pengajuan Penarikan</string>
    <string name="mutasi_transaksi">Mutasi Transaksi</string>
    <string name="mutasi_pengajuan">Mutasi Pengajuan</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_page">Profile Nasabah</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="phone_number">No Telepon</string>
    <string name="_085770539399">085770539399</string>
    <string name="logout1">Logout</string>
    <string name="address">Alamat</string>
    <string name="pondok_maharta_blok_a1_no_22">Pondok Maharta Blok A1 No 22</string>
    <string name="password1">Password</string>
    <string name="_123456">123456</string>
    <string name="tanggalPengajuan">Tanggal Pengajuan</string>
    <string name="jumlahPenarikan">Jumlah Penarikan</string>
    <string name="cari">Cari</string>

</resources>