<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdashboard"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="173dp"
            android:foregroundGravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.652"
            tools:visibility="visible" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/userProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="110dp"
                android:src="@drawable/prof" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignRight="@+id/userProfile"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_edit_24" />
        </RelativeLayout>

        <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:letterSpacing="0.1"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:text="@string/full_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />



    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableTint="@color/Green"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="20dp"
        android:text="@string/name"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/phaksi_bangun_asmoro"
        android:inputType="none"


        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="#d3d3d3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/phone_number"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableTint="@color/Green"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/round_local_phone_24"
        android:drawablePadding="20dp"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/poppins_light"
        android:text="@string/_085770539399"
        android:inputType="number"

        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="#d3d3d3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/address"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle2"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/Green"
            android:fontFamily="@font/poppins_light"
            android:inputType="text|textMultiLine"

            android:paddingStart="20dp"
            android:text="@string/pondok_maharta_blok_a1_no_22"
            android:textColor="@color/black"
            android:textColorHint="#d3d3d3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlamat" />

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            android:background="@drawable/shapebutton"
            android:fontFamily="@font/poppins"
            android:letterSpacing="0.1"
            android:text="Ubah Profile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/cancelUpdateProfile"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAlamat" />

        <Button
            android:id="@+id/cancelUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            android:background="@drawable/shapebutton"
            android:fontFamily="@font/poppins"
            android:letterSpacing="0.1"
            android:text="Cancel"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/updateProfile"

            app:layout_constraintTop_toBottomOf="@+id/etAlamat" />

        <Button
            android:id="@+id/updatePassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:letterSpacing="0.1"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            android:background="@drawable/shapebutton"
            android:fontFamily="@font/poppins"
            android:text="Ubah Password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="18dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateProfile" />



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins"
            android:letterSpacing="0.1"
            android:text="@string/profile_page"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:text="Ubah Password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateProfile"/>

        <TextView
            android:id="@+id/tvgugel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:gravity="center|center_horizontal|center_vertical"
            android:letterSpacing="0.2"
            android:text="@string/logout1"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>